--- a/sell-funniture/src/app/app.component.html
+++ b/sell-funniture/src/app/app.component.html
@@ -1,10 +1,3 @@
-<h1>Locations</h1>
 
-<!-- Show existing locations -->
-<ul>
-  <li *ngFor="let loc of locations">{{ loc.name }}</li>
-</ul>
 
-<!-- Form to add a new location -->
-<input [(ngModel)]="newLocation" placeholder="Add location" />
-<button (click)="addLocation()">Add</button>
+<app-main></app-main>
