--- a/sell_furniture/src/app/components/main/main.component.html
+++ b/sell_furniture/src/app/components/main/main.component.html
@@ -1,6 +1,7 @@
 <h1>Locations</h1>
 <!-- Show existing locations -->
-<ul>
+<div *ngIf="locations.length > 0 || items.length > 0">
+  <ul>
     <li *ngFor="let loc of locations">{{ loc.name }} {{ loc.city ?? "" }}</li>
     <li *ngFor="let item of items">
       <span> {{ item.title }}</span>
@@ -10,6 +11,14 @@
       </div>
     </li>
   </ul>
+</div>
+
+<!-- Show message when no data is available -->
+<div *ngIf="locations.length === 0 && items.length === 0">
+  <p>Welcome to SellFurniture! 🏠</p>
+  <p>No locations or items available at the moment.</p>
+  <p>Try adding a location below to get started!</p>
+</div>
   
   <!-- Form to add a new location -->
   <input type="text" id="locationname" name="locationname" [(ngModel)]="newLocation" placeholder="Add location" />
