--- a/sell_furniture/src/app/app.component.html
+++ b/sell_furniture/src/app/app.component.html
@@ -1,9 +1,8 @@
 
-<div style="padding: 20px; background-color: #f0f0f0; border: 2px solid #333; margin: 20px;">
-  <h1>🚀 Angular App is Loading!</h1>
-  <p>If you can see this, the Angular application is working correctly.</p>
-  <p>Current time: {{ currentTime }}</p>
-</div>
-
+<h1>TEST - ANGULAR IS WORKING</h1>
+<p>This is a test message to see if Angular is loading.</p>
+<p>Time: {{ currentTime }}</p>
+<hr>
 <div>hello mehdi</div>
+<hr>
 <app-main></app-main>
