--- a/sell_furniture/src/styles.scss
+++ b/sell_furniture/src/styles.scss
@@ -1,1 +1,21 @@
 /* You can add global styles to this file, and also import other style files */
+
+body {
+  margin: 0;
+  padding: 20px;
+  font-family: Arial, sans-serif;
+  background-color: white;
+  color: black;
+}
+
+h1 {
+  color: red;
+  font-size: 24px;
+  margin-bottom: 20px;
+}
+
+p {
+  color: blue;
+  font-size: 16px;
+  margin-bottom: 10px;
+}
