--- a/sell_furniture/src/app/app.component.html
+++ b/sell_furniture/src/app/app.component.html
@@ -1,8 +1,7 @@
 
-<h1>TEST - ANGULAR IS WORKING</h1>
-<p>This is a test message to see if Angular is loading.</p>
-<p>Time: {{ currentTime }}</p>
-<hr>
-<div>hello mehdi</div>
-<hr>
-<app-main></app-main>
+<div style="background-color: red; color: white; padding: 20px; font-size: 24px;">
+  <h1>🚀 ANGULAR IS LOADING!</h1>
+  <p>If you can see this red box, Angular is working!</p>
+  <p>Current time: {{ currentTime }}</p>
+  <button (click)="testClick()">Click me to test!</button>
+</div>
