--- a/sell_furniture/src/app/app.component.html
+++ b/sell_furniture/src/app/app.component.html
@@ -1,7 +1,3 @@
 
-<div style="background-color: red; color: white; padding: 20px; font-size: 24px;">
-  <h1>🚀 ANGULAR IS LOADING!</h1>
-  <p>If you can see this red box, Angular is working!</p>
-  <p>Current time: {{ currentTime }}</p>
-  <button (click)="testClick()">Click me to test!</button>
-</div>
+<div>hello mehdi</div>
+<app-main></app-main>
