--- a/sell_furniture/src/styles.scss
+++ b/sell_furniture/src/styles.scss
@@ -2,10 +2,16 @@
 
 body {
   margin: 0;
-  padding: 20px;
+  padding: 0;
   font-family: Arial, sans-serif;
   background-color: white;
   color: black;
+}
+
+/* Global margin for the entire project */
+app-root {
+  display: block;
+  margin: 100px;
 }
 
 h1 {
