--- a/sell_furniture/src/app/components/main/main.component.scss
+++ b/sell_furniture/src/app/components/main/main.component.scss
@@ -1,9 +1,9 @@
 .item-title {
   font-size: 1.3rem;
+  padding: 0.3rem 1.3rem ;
   font-weight: bold;
   color: #2c3e50;
   margin-bottom: 0.8rem;
-  padding: 0.3rem 0;
   border-bottom: 2px solid #3498db;
   background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
   -webkit-background-clip: text;
@@ -34,7 +34,7 @@
     font-size: 1rem;
     line-height: 1.6;
     color: #2c3e50;
-    background-color: #f8f9fa;
+    background-color: white;
     padding: 1rem;
     border-radius: 8px;
     border: 1px solid #e9ecef;
@@ -73,4 +73,12 @@
     display: inline-block;
     box-shadow: 0 2px 8px rgba(231, 76, 60, 0.2);
   }
+}
+.item_container{
+  margin: 1rem 0px 20px 1rem;
+  border: 1px solid #e0e0e0;
+  border-radius: 8px;
+  background-color: #f9f9f9;
+
+padding-bottom: 2rem;
 }
