--- a/sell_furniture/src/app/components/main/main.component.scss
+++ b/sell_furniture/src/app/components/main/main.component.scss
@@ -81,3 +81,46 @@
 
 padding-bottom: 2rem;
 }
+.item-condition {
+  margin-bottom: 1.5rem;
+
+  .description-label {
+    display: block;
+    font-size: 1.1rem;
+    font-weight: 600;
+    color: #34495e;
+    margin-bottom: 0.8rem;
+    text-transform: uppercase;
+    letter-spacing: 1px;
+    border-left: 4px solid #27ae60; // vert = condition
+    padding-left: 0.5rem;
+  }
+
+  .condition-boxes {
+    display: flex;
+    gap: 1rem;
+  }
+
+  .condition-box {
+    flex: 1;
+    text-align: center;
+    padding: 0.3rem 0.3rem;
+    border: 2px solid #27ae60;
+    border-radius: 6px;
+    font-size: 0.8rem;
+    font-weight: 200;
+    color: #27ae60;
+    background-color: transparent;
+    transition: all 0.2s ease-in-out;
+    cursor: default;
+    opacity:0.4
+  }
+
+  .condition-box.active {
+    background-color: #27ae60;
+    color: #fff;
+    font-weight: 600;
+    box-shadow: 0 3px 8px rgba(39, 174, 96, 0.3);
+    opacity: 1;
+  }
+}
