--- a/sell_furniture/src/app/components/main/main.component.scss
+++ b/sell_furniture/src/app/components/main/main.component.scss
@@ -28,6 +28,17 @@
     letter-spacing: 1px;
     border-left: 4px solid #3498db;
     padding-left: 0.5rem;
+    &-small{
+      font-size: 0.8rem;
+      font-weight: 600;
+      color: #34495e;
+      margin-bottom: 0rem;
+      text-transform: uppercase;
+      letter-spacing: 1px;
+      border-left: 2px solid #3498db;
+      padding-left: 0.5rem;
+
+    }
   }
   
   .description-content {
@@ -37,7 +48,14 @@
 
     padding: 1rem;
 
+&-small{
+  font-size: 0.8rem;
+  line-height: 0.6;
+  color: #2c3e50;
 
+  padding: 0.5rem 1rem  2rem 0.5rem;
+
+}
   }
 }
 
@@ -123,4 +141,8 @@ padding-bottom: 2rem;
     box-shadow: 0 3px 8px rgba(39, 174, 96, 0.3);
     opacity: 1;
   }
+}
+.final-price {
+  font-weight: bold;
+  color: #2c3e50; // or your theme color
 }
