--- a/sell_furniture/src/app/components/main/main.component.html
+++ b/sell_furniture/src/app/components/main/main.component.html
@@ -46,7 +46,7 @@
 
     <!-- Items List -->
     <div *ngFor="let item of filteredItems">
-      <div class="item_container">
+      <div *ngIf="item.available ==true" class="item_container">
         <div class="item-title">{{ item.title }}</div>
 
         <div class="item-description">
