--- a/sell_furniture/src/app/components/main/main.component.scss
+++ b/sell_furniture/src/app/components/main/main.component.scss
@@ -408,3 +408,13 @@ h1 {
   margin-right: 5px;
   font-size: 14px;
 }
+
+.spinner-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  min-height: 200px; // adjust to your design
+  font-size: 1.2rem;
+  color: #666;
+}
