--- a/sell_furniture/src/styles.scss
+++ b/sell_furniture/src/styles.scss
@@ -11,7 +11,7 @@ body {
 /* Global margin for the entire project */
 app-root {
   display: block;
-  margin: 100px;
+  margin: 5vh 10vw 5vh 10vw;
 }
 
 h1 {
