--- a/sell_furniture/src/app/components/main/search-bar/search-bar.component.html
+++ b/sell_furniture/src/app/components/main/search-bar/search-bar.component.html
@@ -1,7 +1,7 @@
 <div class="search-container">
-    <input [(ngModel)]="searchText" type="text" placeholder="Search..." />
-    <button class="primary-btn" (click)="search(searchText)">
-        <i class="fas fa-search"></i>
-        Search</button>
-  </div>
-  
+  <input [(ngModel)]="searchText" type="text" placeholder="Search..." />
+  <button class="primary-btn" (click)="onSearch(searchText)">
+    <i class="fas fa-search"></i>
+    Search
+  </button>
+</div>
