--- a/sell_furniture/src/app/components/main/main.component.html
+++ b/sell_furniture/src/app/components/main/main.component.html
@@ -11,8 +11,11 @@
 </ul>-->
     <!-- Category Filters -->
     <header>
-      <h1>Moving Sale</h1>
+      <h1>Moving Sale </h1>
       <p class="subtitle">This is a personal sale, not a business!</p>
+      <p class="subtitle">In total <strong>{{numberItems}}</strong> items </p>
+
+   
     </header>
 
     <!-- Category Filters -->
